--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #000 !important;
+  background: #fafafa;
   color: #fff;
 }
 .grid-block, .main, .post, .comments li, .comment-form {
